tests/snapshots/pretty_print_snapshots__rule_deny_with_reason.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 49
expression: out
---
(rule "rm"
  (deny "No filesystem operations on production hosts"))
