tests/snapshots/pretty_print_snapshots__rule_exact_form.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 153
expression: out
---
(rule "true"
  (and (exact) (allow)))
