tests/snapshots/pretty_print_snapshots__rule_fact_query_presence.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (when (fact? :via/ssh) (deny "no rm over ssh")))
── output ──
(rule "rm"
  (when (fact? :via/ssh)
    (deny "no rm over ssh")))
