tests/snapshots/pretty_print_snapshots__rule_fact_query_value.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (when (fact? [:ssh/host (regex "^prod-")]) (deny "production host")))
── output ──
(rule "rm"
  (when (fact? [:ssh/host (regex "^prod-")])
    (deny "production host")))
