tests/snapshots/pretty_print_snapshots__rule_flag_short.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 159
expression: out
---
(rule "rm"
  (and (flag "r") (deny)))
