tests/snapshots/pretty_print_snapshots__rule_flag_short_long_pair.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 165
expression: out
---
(rule "rm"
  (and (flag ["r" "recursive"]) (deny)))
