tests/snapshots/pretty_print_snapshots__rule_forbidden.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 185
expression: out
---
(rule "git"
  (and (forbidden "--force") (allow)))
