tests/snapshots/pretty_print_snapshots__rule_forbidden_many_atoms_wraps.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 196
expression: out
---
(rule "rm"
  (and (forbidden "-r" "-R" "--recursive" "-rf" "-fr" "-rR" "--force" "-Rf"
                  "-fR" "/")
       (allow)))
