tests/snapshots/pretty_print_snapshots__rule_if.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 100
expression: out
---
(rule "rm"
  (if (flag "r")
      (ask "recursive")
    (allow)))
