tests/snapshots/pretty_print_snapshots__rule_or_command_alternation_short.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule (or "ls" "ll" "la") (allow))
── output ──
(rule (or "ls" "ll" "la")
  (allow))
